    - [New]Each info font & background color can be customized in JSON.
    - [New]Each info display order can be customized via "column_index" in JSON.
    - [New]Added Fahrenheit unit for temperature display via "temp_unit" in JSON.

* Force widget
    - [New]Added horizontal layout.

* Fuel widget
    - [New]Added "low_fuel_lap_threshold" option in JSON.

* Pressure widget
    - [New]Each info display order can be customized via "column_index" in JSON.
    - Tyre load ratio is now calculated against sum of all wheels load.
    - Reworked layouts (vertical & horizontal).

* Relative Widget
    - Removed brackets from combined driver name if name is empty.

* Sectors Widget
    - Removed unnecessary "show_best_sector_time" option,
      always shows each best sector time if available.

* Timing Widget
    - [New]Show current session best laptime from all players,
      with additional option to show laptime from same vehicle class only (default ON).
    - [New]Personal best, last, estimated laptime display can be individually hide in JSON.
    - [New]Each info prefix text can be customized or hide in JSON.
    - [New]Each info display order can be customized via "column_index" in JSON.
    - Removed double lines horizontal layout.

* Wear widget
    - [New]Each info font & background color can be customized in JSON.
    - Adjusted options naming in JSON.

* Weather widget
    - [New]Each info display order can be customized via "column_index" in JSON.
    - [New]Each info font & background color can be customized in JSON.
    - Moved "Dry/Wet" label to wetness bar.

* Core
    - Auto sorts all options in JSON file according to default setting template
      for better readability and consistency.
    - Optimized GUI update methods for widgets:
      Cruise, Deltabest, DRS, Engine, Force, Fuel, Pedal, Pressure, Sectors, Session, Timing, Wear, Weather.
    - Use Linux XDG directories for storing user data (by Bernat).